--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,21 @@ android {
         enabled = true
     }
 
+    sourceSets {
+        main{
+            java.srcDirs += 'src/main/kotlin'
+        }
+        String sharedTestDir = 'src/sharedTest/kotlin'
+        test {
+            java.srcDir 'src/test/kotlin'
+            java.srcDir sharedTestDir
+        }
+        androidTest {
+            java.srcDir 'src/androidTest/kotlin'
+            java.srcDir sharedTestDir
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -66,6 +81,10 @@ dependencies {
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.0-beta-3'
 
     testImplementation "androidx.room:room-testing:$room_version"
+
+    def mockk_version = "1.9.2"
+    testImplementation "io.mockk:mockk:$mockk_version"
+    androidTestImplementation "io.mockk:mockk-android:$mockk_version"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
