--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -56,7 +56,11 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.core:core-ktx:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.github.PaoloMilano:bound-recyclerview:0.0.2'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation "androidx.recyclerview:recyclerview:1.0.0"
+    implementation 'androidx.paging:paging-runtime-ktx:2.1.0'
+    implementation "android.arch.paging:runtime:2.1.0"
+    implementation 'com.github.PaoloMilano:bound-recyclerview:0.0.4'
 
     def lifecycle_version = '2.2.0-alpha03'
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
@@ -74,10 +78,7 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
-    kapt 'android.arch.persistence.room:compiler:2.1.0'
-
-    implementation "android.arch.paging:runtime:2.1.0"
-    implementation "androidx.recyclerview:recyclerview:1.0.0"
+    kapt "android.arch.persistence.room:compiler:$room_version"
 
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.0-beta-3'
 
@@ -90,6 +91,4 @@ dependencies {
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'com.google.android.material:material:1.0.0'
 }
